<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="electionViewModel"
            type="com.example.android.politicalpreparedness.election.ElectionsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/default_padding"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <TextView
            android:id="@+id/upcoming_elections_text"
            style="@style/section_title_style"
            android:text="@string/upcoming_elections" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4">

            <ImageView
                android:id="@+id/loading_upcoming_elections_image"
                android:layout_width="@dimen/loading_indicator_dimens"
                android:layout_height="@dimen/loading_indicator_dimens"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/small_padding"
                viewVisibility="@{!electionViewModel.networkNotAvailable}"
                android:src="@drawable/loading_animation"
                android:contentDescription="@string/connection_error" />

            <ImageView
                android:id="@+id/connection_error_image"
                viewVisibility="@{electionViewModel.networkNotAvailable}"
                android:layout_width="@dimen/loading_indicator_dimens"
                android:layout_height="@dimen/loading_indicator_dimens"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/small_padding"
                android:contentDescription="@string/connection_error"
                android:src="@drawable/ic_connection_error" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/upcoming_elections_recycler"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="@dimen/default_padding"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="10"
                tools:listitem="@layout/election_item" />

        </RelativeLayout>

        <TextView
            style="@style/section_title_style"
            android:layout_marginTop="@dimen/default_padding"
            android:text="@string/saved_elections" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4">

            <TextView
                android:id="@+id/no_data_hint"
                style="@style/no_data_hint_style"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="@string/no_saved_item_yet" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/saved_elections_recycler"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="@dimen/default_padding"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="10"
                tools:listitem="@layout/election_item" />
        </RelativeLayout>
    </LinearLayout>
</layout>